--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,11 @@
-<ion-header [translucent]="true">
+<ion-header style="background-color: #E3350D;">
   <ion-toolbar>
-    <ion-title>
-      Grupo-Link Prueba
+    <ion-title style="color: white;">
+      Pokedex
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">
-        Inbox
-      </ion-title>
-    </ion-toolbar>
-  </ion-header>
-  
   <ion-list>
     <!-- *ngFor="let message of getMessages()" [message]="message" -->
     <app-pokemon></app-pokemon>
