--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -3,6 +3,11 @@ ion-item {
   --inner-padding-end: 0;
 }
 
+ion-col {
+  // flex: 10 10 auto;
+//   display: contents;
+}
+
 ion-label {
   margin-top: 12px;
   margin-bottom: 12px;
