--- a/src/app/detalle-pokemon/detalle-pokemon.page.html
+++ b/src/app/detalle-pokemon/detalle-pokemon.page.html
@@ -1,37 +1,175 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
+      <ion-button (click)="dismiss()" expand="block" fill="clear" shape="round">
+        <ion-icon name="arrow-back-outline"></ion-icon>
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-card>
-    <ion-grid fixed>
+  
+  <ion-grid fixed>
+    <ion-card>
       <ion-row>
-        <ion-col size="3">
+        <ion-col size="auto" size-md style="background-color: lightgray;">
           <ion-img src='../../assets/img/pokemon/{{imgIterador}}.png'></ion-img>
         </ion-col>
-        <ion-col size="9">
+        <ion-col *ngIf="!pokemonData" size="12" size-md>
           <ion-card-header>
-            <ion-card-subtitle>Pokemon #{{imgIterador}} </ion-card-subtitle>
-            <ion-card-title> {{variedadPokemon | titlecase }} </ion-card-title>
+            <ion-card-title> 
+              <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text> 
+            </ion-card-title>
+            <ion-card-subtitle>
+              <ion-skeleton-text animated style="width: 30%"></ion-skeleton-text> 
+            </ion-card-subtitle>
           </ion-card-header>
-        
           <ion-card-content>
-            {{descripcionPokemon}}
+            <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+            <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+            <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
             <br>
           </ion-card-content>
           <ion-card-content>
-            <ion-button *ngFor="let item of habilidadPokemon" expand="block" fill="solid" shape="round">
+            <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
+          </ion-card-content>
+        </ion-col>
+        <ion-col *ngIf="pokemonData" size="auto" size-md>
+          <ion-card-header>
+            <ion-card-title> {{pokemonData.nombre | titlecase }} </ion-card-title>
+            <ion-card-subtitle>N° {{pokemonData.numero}} </ion-card-subtitle>
+          </ion-card-header>
+          <ion-card-content>
+            {{pokemonData.descripcion}}
+            <br>
+          </ion-card-content>
+          <ion-card-content>
+            <ion-button *ngFor="let item of habilidadPokemon" size="small">
               {{item.ability.name}}
             </ion-button>
           </ion-card-content>
         </ion-col>
       </ion-row>
-    </ion-grid>
-    
-  </ion-card>
-  
+      <ion-card *ngIf="!pokemonData" color="secondary">
+        <ion-row>
+          <ion-col size="6" size-md>
+              <ion-card-header>
+                <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+                <ion-card-title>
+                  <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text> 
+                </ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                <ion-progress-bar color="tertiary"></ion-progress-bar>
+              </ion-card-content>
+              <ion-card-header>
+                <ion-card-title>
+                  <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text> 
+                </ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                <ion-card-subtitle>
+                  <ion-skeleton-text animated style="width: 75%"></ion-skeleton-text> 
+                </ion-card-subtitle>
+              </ion-card-content>
+              <ion-card-header>
+                <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+                <ion-card-title>
+                  <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
+                </ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                <ion-skeleton-text animated style="width: 100%"></ion-skeleton-text> 
+              </ion-card-content>
+          </ion-col>
+          <ion-col size="6" size-md>
+            <ion-card-header>
+              <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+              <ion-card-title>
+                <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
+              </ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-progress-bar color="tertiary"></ion-progress-bar>
+            </ion-card-content>
+            <ion-card-header>
+              <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+              <ion-card-title>
+                <ion-skeleton-text animated style="width: 50%"></ion-skeleton-text>
+              </ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-progress-bar color="tertiary"></ion-progress-bar>
+            </ion-card-content>
+            <ion-card-header>
+              <ion-card-title>
+                <ion-skeleton-text animated style="width: 75%"></ion-skeleton-text>
+              </ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-progress-bar color="tertiary"></ion-progress-bar>
+            </ion-card-content>
+          </ion-col>
+        </ion-row>
+      </ion-card>
+      <ion-card  *ngIf="pokemonData" color="secondary">
+        <ion-row>
+          <ion-col class="ion-text-sm" size="6" size-md>
+              <ion-card-header>
+                <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+                <ion-card-title>Felicidad</ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                <ion-progress-bar color="tertiary" value="0.{{detallePokemon?.base_happiness}}"></ion-progress-bar>
+                <!-- <ion-card-title style="color: black;">{{detallePokemon?.base_happiness}} </ion-card-title> -->
+              </ion-card-content>
+              <ion-card-header>
+                <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+                <ion-card-title>Categoria</ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                <ion-card-subtitle>
+                  <ion-card-title style="color: black;">{{categoriaPokemon}}</ion-card-title>
+                </ion-card-subtitle>
+              </ion-card-content>
+              <ion-card-header>
+                <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+                <ion-card-title>Tipo</ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                <ion-button color="light" *ngFor="let item of tipoPokemon" size="small">
+                  {{item}}
+                </ion-button>
+              </ion-card-content>
+          </ion-col>
+          <ion-col size="6" size-md>
+            <ion-card-header>
+              <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+              <ion-card-title>Ataque</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-progress-bar color="tertiary" value="0.{{estadisticaPokemon?.base_score}}"></ion-progress-bar>
+              <!-- <ion-card-title style="color: black;">{{estadisticaPokemon?.base_score}}</ion-card-title> -->
+            </ion-card-content>
+            <ion-card-header>
+              <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+              <ion-card-title>Radio</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-progress-bar color="tertiary" value="0.{{estadisticaPokemon?.rate}}"></ion-progress-bar>
+              <!-- <ion-card-title style="color: black;">{{estadisticaPokemon?.rate}}</ion-card-title> -->
+            </ion-card-content>
+            <ion-card-header>
+              <ion-card-title>Tasa de captura</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-progress-bar color="tertiary" value="0.{{detallePokemon?.capture_rate}}"></ion-progress-bar>
+              <!-- <ion-card-title style="color: black;">{{detallePokemon?.capture_rate}}</ion-card-title> -->
+            </ion-card-content>
+          </ion-col>
+        </ion-row>
+      </ion-card>
+    </ion-card>
+  </ion-grid>
 </ion-content>
