--- a/src/app/detalle-pokemon/detalle-pokemon.page.scss
+++ b/src/app/detalle-pokemon/detalle-pokemon.page.scss
@@ -38,3 +38,26 @@ h1 {
 p {
   line-height: 22px;
 }
+
+/* ion-grid{
+  --ion-grid-padding: 5px;
+
+--ion-grid-padding-xs: 5px;
+--ion-grid-padding-sm: 5px;
+--ion-grid-padding-md: 5px;
+--ion-grid-padding-lg: 5px;
+--ion-grid-padding-xl: 5px;
+} */
+
+ion-col{
+  --ion-grid-column-padding: 5px;
+  --ion-grid-column-padding-xs: 5px;
+  --ion-grid-column-padding-sm: 5px;
+  --ion-grid-column-padding-md: 5px;
+  --ion-grid-column-padding-lg: 5px;
+  --ion-grid-column-padding-xl: 5px;
+}
+
+ion-card-title {
+  font-size: 3.5vw;
+}
