--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -22,14 +22,14 @@
 
 <ion-grid [fixed]="true" *ngIf="!flagSolar">
   <ion-row>
-    <ion-col size-lg="4" *ngFor="let item of pokemon | busqueda: filtrarPokemon; index as i " >
+    <ion-col  size-lg="4" *ngFor="let item of pokemon | busqueda: filtrarPokemon; index as i">
       <!-- routerLink="/detalle/{{item.entry_number}}" -->
-      <ion-card (click)="DetallePokemonModal(item.entry_number)" >
+      <ion-card  (click)="DetallePokemonModal(item.entry_number)" >
         <ion-img style="background-color: lightgray;" 
         src='https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/{{item.entry_number}}.png'>
       </ion-img>
         <ion-card-header>
-          <ion-card-subtitle>Pokemon:</ion-card-subtitle>
+          <ion-card-subtitle>Pokemon</ion-card-subtitle>
           <ion-card-title>{{item.pokemon_species.name | titlecase }}</ion-card-title>
         </ion-card-header>
       </ion-card>
